// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repository last commit component renders commit widget 1`] = `
<div
  class="info-well d-none d-sm-flex project-last-commit commit p-3"
>
  <useravatarlink-stub
    class="avatar-cell"
    imgalt=""
    imgcssclasses=""
    imgsize="40"
    imgsrc="https://test.com"
    linkhref="https://test.com/test"
    tooltipplacement="top"
    tooltiptext=""
    username=""
  />
   
  <div
    class="commit-detail flex-list"
  >
    <div
      class="commit-content qa-commit-content"
    >
      <gllink-stub
        class="commit-row-message item-title"
        href="https://test.com/commit/123"
      >
        
          Commit title
        
      </gllink-stub>
       
      <!---->
       
      <div
        class="committer"
      >
        <gllink-stub
          class="commit-author-link js-user-link"
          href="https://test.com/test"
        >
          
            Test
          
        </gllink-stub>
        
          authored
          
        <timeagotooltip-stub
          cssclass=""
          time="2019-01-01"
          tooltipplacement="bottom"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="commit-actions flex-row"
    >
      <!---->
       
      <div
        class="ci-status-link"
      >
        <gllink-stub
          class="js-commit-pipeline"
          href="https://test.com/pipeline"
          title="Commit: failed"
        >
          <ciicon-stub
            aria-label="Commit: failed"
            cssclasses=""
            size="24"
            status="[object Object]"
          />
        </gllink-stub>
      </div>
       
      <div
        class="commit-sha-group d-flex"
      >
        <div
          class="label label-monospace monospace"
        >
          
            12345678
          
        </div>
         
        <clipboardbutton-stub
          cssclass="btn-default"
          text="123456789"
          title="Copy commit SHA"
          tooltipplacement="bottom"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Repository last commit component renders the signature HTML as returned by the backend 1`] = `
<div
  class="info-well d-none d-sm-flex project-last-commit commit p-3"
>
  <useravatarlink-stub
    class="avatar-cell"
    imgalt=""
    imgcssclasses=""
    imgsize="40"
    imgsrc="https://test.com"
    linkhref="https://test.com/test"
    tooltipplacement="top"
    tooltiptext=""
    username=""
  />
   
  <div
    class="commit-detail flex-list"
  >
    <div
      class="commit-content qa-commit-content"
    >
      <gllink-stub
        class="commit-row-message item-title"
        href="https://test.com/commit/123"
      >
        
          Commit title
        
      </gllink-stub>
       
      <!---->
       
      <div
        class="committer"
      >
        <gllink-stub
          class="commit-author-link js-user-link"
          href="https://test.com/test"
        >
          
            Test
          
        </gllink-stub>
        
          authored
          
        <timeagotooltip-stub
          cssclass=""
          time="2019-01-01"
          tooltipplacement="bottom"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="commit-actions flex-row"
    >
      <div>
        <button>
          Verified
        </button>
      </div>
       
      <div
        class="ci-status-link"
      >
        <gllink-stub
          class="js-commit-pipeline"
          href="https://test.com/pipeline"
          title="Commit: failed"
        >
          <ciicon-stub
            aria-label="Commit: failed"
            cssclasses=""
            size="24"
            status="[object Object]"
          />
        </gllink-stub>
      </div>
       
      <div
        class="commit-sha-group d-flex"
      >
        <div
          class="label label-monospace monospace"
        >
          
            12345678
          
        </div>
         
        <clipboardbutton-stub
          cssclass="btn-default"
          text="123456789"
          title="Copy commit SHA"
          tooltipplacement="bottom"
        />
      </div>
    </div>
  </div>
</div>
`;
